--- a/front/app/styles/globals.css
+++ b/front/app/styles/globals.css
@@ -24,3 +24,23 @@ a {
     background: black;
   }
 }
+
+.container {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1164px;
+  padding-left: 32px;
+  padding-right: 32px;
+  @media screen and (max-width: 991px) {
+    max-width: 984px;
+  }
+  @media screen and (max-width: 767px) {
+    max-width: 744px;
+  }
+  @media screen and (max-width: 575px) {
+    max-width: 100%;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
